# WhistServer

./: .gitignore  README.md  configure.ac
src/: Makefile.am  main.cpp
src/database/: Database.cpp  Database.h
src/parser/: parser.cpp  parser.h
src/server/: Commands.h  Connection.cpp  Connection.h  Player.cpp  Player.h  Players.cpp  Players.h  ProcessingCommand.cpp  ProcessingCommand.h  Server.hpp  Table.cpp  Table.h  Tables.cpp  Tables.h
src/utilities/: .print.cpp.swp  .print.h.swp  checks.cpp  checks.h  print.cpp  print.h
